--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -1,6 +1,6 @@
 ---
 
-name: ci
+name: daily
 
 on:
   schedule:
@@ -11,12 +11,16 @@ jobs:
     name: test
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        ruby: [{ name: 3.2, value: 3.2.2 }, { name: 3.0, value: 3.0.1 }]
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7.2
+          ruby-version: ${{ matrix.ruby.value }}
           bundler-cache: true
 
       - name: Run tests
